@@ -224,6 +224,14 @@
 	* ipa-prop.c (determine_known_aggregate_parts): Check that LHS does
 	not access a bit-field.  Assert all final offsets are byte-aligned.
 
+2013-05-23  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/57380
+	* tree-ssa-phiprop.c (propagate_with_phi): Do not require at
+	least one invariant or re-used load.
+	* passes.c (init_optimization_passes): Move pass_phiprop before
+	pass_forwprop.
+
 2013-05-23  James Greenhalgh  <james.greenhalgh@arm.com>
 
 	* config/aarch64/aarch64-simd.md
